--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "prisma": {
-    "schema": "./prisma/schema"
+    "schema": "./prisma/schema",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
