--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@stripe/stripe-js": "^8.5.3",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
@@ -50,6 +51,7 @@
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "prisma": "^6.7.0",
+    "stripe": "^20.0.0",
     "zod": "^4.1.13"
   }
 }
